--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ESTA ES UNA PAGINA PARA PROBAR GIT</h1>
+    <h1>ESTA ES UNA PAGINA PARA PROBAR GIT Y GITHUB </h1>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae eum consequatur dolore eveniet velit sint laboriosam error quod, necessitatibus sed. Dolor odio quo soluta laboriosam voluptas autem iste velit? Quas.</p>
 </body>
 </html>
