Agregado de info

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>ESTA ES UNA PAGINA PARA PROBAR GIT</h1>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sint sit libero autem assumenda, officia aut quisquam maiores sequi accusamus cupiditate veritatis ex quia illum reiciendis! Earum sapiente praesentium commodi?</p>
 </body>
 </html>
