--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>ESTA ES UNA PAGINA PARA PROBAR GIT</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus sint sit libero autem assumenda, officia aut quisquam maiores sequi accusamus cupiditate veritatis ex quia illum reiciendis! Earum sapiente praesentium commodi?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis qui repudiandae placeat alias ex ipsum omnis aut tenetur, earum mollitia magni odit, voluptatum ducimus repellendus sit provident cumque aspernatur modi!</p>
 </body>
 </html>
