Agregamos más parrafos y un color

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>git y github</title>
 </head>
 <body>
     <h1>ESTA ES UNA PAGINA PARA PROBAR GIT</h1>
+
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab saepe debitis ducimus placeat illo quaerat impedit alias enim ipsum corrupti, voluptas quam error necessitatibus nihil quas eos at hic cumque.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolore eveniet nostrum doloremque facere blanditiis temporibus iusto iure. Blanditiis dicta sint provident quisquam nam sunt accusantium nisi inventore, sapiente enim.</p>
+
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero soluta corrupti deleniti ullam consectetur cupiditate placeat commodi nihil sed aspernatur dolore velit saepe, ratione nostrum quaerat? Atque enim dolores nostrum!</p>
 </body>
 </html>
