Agregado de imagenes

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
 
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero soluta corrupti deleniti ullam consectetur cupiditate placeat commodi nihil sed aspernatur dolore velit saepe, ratione nostrum quaerat? Atque enim dolores nostrum!</p>
+
+    <div>
+        <img src="./img/imagen_portada_1.jpeg" alt="portada">
+    </div>
 </body>
 </html>
